syntax = "proto3";

package com.sokima.domain.proto;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.sokima.domain.proto";

message Cart {
  int64 cartId = 1;
  int64 userId = 2;
  repeated int64 productIds = 3;
  google.protobuf.Timestamp updatedAt = 4;
  string updater = 5;
}
